# reverser

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: example-reversed.csv  example.csv
src/: main.rs
src/cli/: args_handler.rs  mod.rs  old_main.rs  standard_msgs.rs
src/cli_handler/: arg_parser.rs  args_handler.rs  mod.rs  old_main.rs  options.rs  parsed_args.rs  standard_msgs.rs  validator.rs
src/io/: file_reader.rs  file_writer.rs  mod.rs  reader.rs  types.rs  writer.rs
src/line_reverser/: line_reverser.rs  mod.rs  output_file.rs
